<resources>
    <string name="app_name">Covid Status Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">refresh</string>
    <string name="search">Search</string>
    <string name="about">about</string>
    <string name="exit">Exit</string>
    <string name="global_covid_cases">GLOBAL COVID CASES</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="new_deaths">New Deaths</string>
    <string name="fetching_data">Fetching Data....</string>
    <string name="countries">COUNTRIES</string>
    <string name="new_cases">New Cases</string>
    <string name="new_recovered">New Recovered</string>
    <string name="last_updated">Last Updated</string>
    <string name="see_timeline">See Timeline</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="increased">Increased</string>
    <string name="increased_by">Increased By</string>
    <string name="app_logo">App Logo</string>
    <string name="loading_data">Loading Data</string>
    <string name="please_wait">Please Wait</string>
    <string name="hide_timeline">HIDE TIMELINE</string>
    <string name="please_check_your_net">Please Check your Internet Connectivity</string>
    <string name="developer_name">Developer Name</string>
    <string name="company_mail">rambo.aap.gconsole@gmail.com</string>
    <string name="dear_users">Dear Users</string>
    <string name="thank_you">Thank You for Downloading and supporting this app</string>
    <string name="suggestion">If you have any suggestions/query feel free to contact us on the mail given below</string>
</resources>