<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/refresh"
        android:id="@+id/refreshIcon"
        android:icon="@drawable/ic_baseline_refresh_24"/>
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>



    <item android:title="@string/about"
        android:id="@+id/aboutIcon"
        android:icon="@drawable/ic_baseline_contact_support_24"/>

    <item android:title="@string/exit"
        android:id="@+id/exitIcon"
        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
</menu>