<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragmentCountryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fetching_data"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:background="@color/background"
                    android:layout_height="2dp"
                    android:backgroundTint="#CDDC39" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="3dp"
                            android:text="@string/total_cases"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="3dp"
                            android:text="@string/total_recovered"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="3dp"
                            android:text="@string/total_deaths"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="3dp"
                            android:text="@string/new_cases"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="3dp"
                            android:text="@string/new_deaths"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="3dp"
                            android:text="@string/new_recovered"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="3dp"
                            android:text="@string/last_updated"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fragmentTotalCases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/fetching_data"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/fragmentTotalRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/fetching_data"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/fragmentTotalDeaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/fetching_data"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/fragmentNewCases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/fetching_data"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/fragmentNewDeaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/fetching_data"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/fragmentNewRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/fetching_data"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/fragmentLastUpdated"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/fetching_data"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/timeLineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/background"
            android:text="@string/see_timeline" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timeLineRecyclerView"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>